--- a/css/style.css
+++ b/css/style.css
@@ -581,6 +581,11 @@ fieldset {
 
   background-color: #e4e4de;
   border-radius: 5px;
+
+  justify-content: center;
+  display:flex;
+  align-items: center;
+
 }
 
 .ad-form__element--submit {
