--- a/css/style.css
+++ b/css/style.css
@@ -1033,3 +1033,16 @@ fieldset {
 .hidden {
   display: none;
 }
+
+.alert-message{
+  z-index: 100;
+  position:absolute;
+  left: 0;
+  top : 0;
+  right : 0;
+  padding : 10px 3px;
+  font-size: 24px;
+  text-align: center;
+  color : white;
+  background-color: red;
+}
